samples/_failures_safe/1761422179_89a931_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1912bc4c.c: In function ‘tokenize’:
./samples/SAFE/__tmp_1912bc4c.c:157:5: error: expected expression at end of input
  157 |     if (lexer == NULL || tokens == NULL ||
      |     ^~
./samples/SAFE/__tmp_1912bc4c.c:157:5: error: expected declaration or statement at end of input
